--- a/Pages/gallery.css
+++ b/Pages/gallery.css
@@ -33,7 +33,7 @@ body {
     top: 0%;
     left: 0%;
     flex-shrink: 0;
-    background-image: url('https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png');
+    background-image: url('https://cdn.discordapp.com/attachments/1066072940191416372/1087830422647492739/4x.jpg');
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
